--- a/spec/fixtures/vcr_cassettes/chat_real_error_scenarios_openai_gpt-4_1-nano_handles_context_length_exceeded_errors.yml
+++ b/spec/fixtures/vcr_cassettes/chat_real_error_scenarios_openai_gpt-4_1-nano_handles_context_length_exceeded_errors.yml
@@ -77,4 +77,75 @@ http_interactions:
             }
         }
   recorded_at: Fri, 01 Aug 2025 09:56:46 GMT
+- request:
+    method: post
+    uri: https://api.openai.com/v1/responses
+    body:
+      encoding: UTF-8
+      string: '{"model":"gpt-4.1-nano","input":[{"type":"message","role":"user","content":"<MASSIVE_TEXT>","status":"completed"},{"type":"message","role":"assistant","content":"<MASSIVE_TEXT>","status":"completed"},{"type":"message","role":"user","content":"<MASSIVE_TEXT>","status":"completed"},{"type":"message","role":"assistant","content":"<MASSIVE_TEXT>","status":"completed"},{"type":"message","role":"user","content":"<MASSIVE_TEXT>","status":"completed"},{"type":"message","role":"assistant","content":"<MASSIVE_TEXT>","status":"completed"},{"type":"message","role":"user","content":"<MASSIVE_TEXT>","status":"completed"},{"type":"message","role":"assistant","content":"<MASSIVE_TEXT>","status":"completed"},{"type":"message","role":"user","content":"<MASSIVE_TEXT>","status":"completed"},{"type":"message","role":"assistant","content":"<MASSIVE_TEXT>","status":"completed"},{"type":"message","role":"user","content":"Hi","status":"completed"}],"stream":false,"temperature":0.7}'
+    headers:
+      User-Agent:
+      - Faraday v2.12.2
+      Authorization:
+      - Bearer <OPENAI_API_KEY>
+      Content-Type:
+      - application/json
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 500
+      message: Internal Server Error
+    headers:
+      Date:
+      - Tue, 05 Aug 2025 05:04:44 GMT
+      Content-Type:
+      - application/json
+      Content-Length:
+      - '353'
+      Connection:
+      - keep-alive
+      Openai-Version:
+      - '2020-10-01'
+      Openai-Organization:
+      - "<OPENAI_ORGANIZATION>"
+      Openai-Project:
+      - proj_j3YWwie2yjmMHTGYtUxoTOJ7
+      X-Request-Id:
+      - "<X_REQUEST_ID>"
+      Openai-Processing-Ms:
+      - '6894'
+      X-Envoy-Upstream-Service-Time:
+      - '6899'
+      X-Envoy-Decorator-Operation:
+      - tasksapi.openai.svc.cluster.local:8081/*
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
+      Cf-Cache-Status:
+      - DYNAMIC
+      Set-Cookie:
+      - "<COOKIE>"
+      - "<COOKIE>"
+      X-Content-Type-Options:
+      - nosniff
+      Server:
+      - cloudflare
+      Cf-Ray:
+      - "<CF_RAY>"
+      Alt-Svc:
+      - h3=":443"; ma=86400
+    body:
+      encoding: UTF-8
+      string: |-
+        {
+          "error": {
+            "message": "An error occurred while processing your request. You can retry your request, or contact us through our help center at help.openai.com if the error persists. Please include the request ID req_630c2c7cf0cdc55830bd88fee6ac4495 in your message.",
+            "type": "server_error",
+            "param": null,
+            "code": "server_error"
+          }
+        }
+  recorded_at: Tue, 05 Aug 2025 05:04:44 GMT
 recorded_with: VCR 6.3.1
