Refactor providers from modules to classes
- Convert all provider modules to classes inheriting from RubyLLM::Provider
- Enable per-instance configuration and connection management
- Store config in provider instance to avoid passing it around everywhere
- Improve local vs remote provider detection
- Add openai_use_system_role config option for OpenAI-compatible servers
- Document openai_use_system_role configuration option
- Clean up unnecessary comments throughout codebase

Fixes #195

--- a/spec/fixtures/vcr_cassettes/chat_basic_chat_functionality_gpustack_qwen3_returns_raw_responses.yml
+++ b/spec/fixtures/vcr_cassettes/chat_basic_chat_functionality_gpustack_qwen3_returns_raw_responses.yml
@@ -10,8 +10,6 @@ http_interactions:
     headers:
       User-Agent:
       - Faraday v2.13.4
-      Authorization:
-      - Bearer <GPUSTACK_API_KEY>
       Content-Type:
       - application/json
       Accept-Encoding:
@@ -24,15 +22,15 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 01 Aug 2025 12:20:52 GMT
-      - Fri, 01 Aug 2025 12:20:53 GMT
+      - Wed, 06 Aug 2025 16:46:03 GMT
+      - Wed, 06 Aug 2025 16:46:03 GMT
       Server:
       - uvicorn
       - uvicorn
       Keep-Alive:
       - timeout=15, max=100
       Content-Length:
-      - '782'
+      - '783'
       Content-Type:
       - application/json
       X-Request-Accepted-At:
@@ -44,7 +42,7 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '{"choices":[{"finish_reason":"stop","index":0,"message":{"content":"\n\nThe
-        capital of France is **Paris**. It is also the largest city in France and
-        serves as a major cultural, economic, and political hub.","role":"assistant"}}],"created":1754050855,"id":"chatcmpl-vvDz0PuUo7B0pjWOvnsEBfjtmg9U7xEA","model":"qwen3","object":"chat.completion","usage":{"completion_tokens":234,"completion_tokens_details":{"accepted_prediction_tokens":0,"reasoning_tokens":200,"rejected_prediction_tokens":0},"draft_tokens":0,"draft_tokens_acceptance":0.0,"prompt_tokens":15,"prompt_tokens_details":{"cached_tokens":3},"prompt_tokens_per_second":835.9806052499581,"time_per_output_token_ms":9.172666666666666,"time_to_first_token_ms":17.943,"tokens_per_second":109.01955083945053,"total_tokens":249}}'
-  recorded_at: Fri, 01 Aug 2025 12:20:55 GMT
+        capital of France is **Paris**. It is the largest city in France and serves
+        as the country''s political, economic, and cultural hub.","role":"assistant"}}],"created":1754498765,"id":"chatcmpl-tem51opglOSnfIceMvU8HaeAJkcrqd1U","model":"qwen3","object":"chat.completion","usage":{"completion_tokens":183,"completion_tokens_details":{"accepted_prediction_tokens":0,"reasoning_tokens":149,"rejected_prediction_tokens":0},"draft_tokens":0,"draft_tokens_acceptance":0.0,"prompt_tokens":15,"prompt_tokens_details":{"cached_tokens":3},"prompt_tokens_per_second":856.5065951007822,"time_per_output_token_ms":8.575524590163933,"time_to_first_token_ms":17.513,"tokens_per_second":116.61094192966259,"total_tokens":198}}'
+  recorded_at: Wed, 06 Aug 2025 16:46:05 GMT
 recorded_with: VCR 6.3.1
